[package]
name = "core0"
version = "0.1.0"
edition = "2021"

[dependencies]
cyt2b9_c = { version = "0.0.1", features = ["rt"] }
cortex-m = { version = "0.7.0", features = ["critical-section"] }
cortex-m-rt = "0.7.5"
panic-halt = "1.0.0"
rtic = { version = "2.1.2", features = ["cortex-m","test-critical-section"] }
defmt = "0.3.10"
defmt-rtt = "0.4.1"
# critical-section = { version = "1.2", features = ["cortex-m"] }  
